--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ ul {
 }
 
 .col1 {
-    width: 50%;
+    width: 60%;
     height: 450px;
     float: left;
     background-color:#D6D6D6;
@@ -71,14 +71,14 @@ ul {
 }
 
 .col1a {
-    width: 20%;
+    width: 30%;
     float: right;
     padding: 0 10px;
     line-height: 40px;
 }
 
 .col1b {
-    width: 80%;
+    width: 70%;
     float: left;
     text-align: left;
     padding: 0 10px;
@@ -86,7 +86,7 @@ ul {
 }
 
 .col2 {
-    width: 50%;
+    width: 40%;
     float: left;
     padding: 0 10px;
     text-align: center;
@@ -102,7 +102,7 @@ ul {
 	line-height: 40px;
 	font-size: 12px;
 	margin: 0px 0px 0px 10px;
-	margin-right: 12px;
+	margin-right: 0px;
 }
 
 input[type="radio"]{
@@ -131,10 +131,9 @@ input[type="radio"]{
     cursor: pointer;
     margin-top: 40px;
     box-shadow: 5px 5px 5px #888888;
-    display:none;
 }
 
 li:hover {
 	color:red;
-	text-decoration: underline;
+	cursor:pointer;
 }
